--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <a href="./index.html" class="logo-oll"><span class="logo-blue">Web</span>Studio</a>
         <nav>
 
-            <ul class="header-nav">
+            <ul class="header-navigation">
                 <li><a href="./index.html" class="link current">Студія</a></li>
                 <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
                 <li><a href="" class="link">Контакти</a></li>
@@ -102,10 +102,10 @@
         <a href="./index.html " class="logo-oll "><span class="logo-blue ">Web</span>Studio</a>
 
         <address>
-            <ul class="footer-link ">
-                <li><a href="https://www.google.com/maps?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjc1Y7t9KX6AhUMiYsKHZ-zAWIQ_AUoAXoECAEQAw ">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com ">info@devstudio.com</a></li>
-                <li><a href="tel:++380961111111 ">+38 096 111 11 11</a></li>
+            <ul class="footer-link">
+                <li><a href="https://www.google.com/maps?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjc1Y7t9KX6AhUMiYsKHZ-zAWIQ_AUoAXoECAEQAw" ><span class="footer-link-street">м. Київ, пр-т Лесі Українки, 26</span></a></li>
+                <li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
+                <li><a href="tel:++380961111111" class="footer-contact">+38 096 111 11 11</a></li>
             </ul>
             
         </address>
