--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 
 
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="page-portfolio">
+<body class="page">
     <header>
         <a href="./index.html" class="logo-oll"><span class="logo-blue">Web</span>Studio</a>
         <nav>
