--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,14 @@
         <a href="./index.html" class="logo-oll"><span class="logo-blue">Web</span>Studio</a>
         <nav>
 
-            <ul class="navigation-menu link">
-                <li><a href="./index.html" class="list ">Студія</a></li>
-                <li><a href="./portfolio.html" class="list current">Портфоліо</a></li>
-                <li><a href="" class="list">Контакти</a></li>
+            <ul class="navigation-menu list">
+                <li><a href="./index.html" class="navigation-link">Студія</a></li>
+                <li><a href="./portfolio.html" class="navigation-link current">Портфоліо</a></li>
+                <li><a href="" class="navigation-link">Контакти</a></li>
             </ul>
         </nav>
 
-        <ul class="contact-list link">
+        <ul class="contact-list list">
             <li><a href="mailto:info@devstudio.com" class="top-list">info@devstudio.com</a></li>
             <li><a href="tel:++380961111111" class="top-list">+38 096 111 11 11</a></li>
         </ul>
@@ -37,7 +37,7 @@
         <section>
             <!-- <h1>portfolio</h1> -->
 
-            <ul class="btn link">
+            <ul class="btn list">
                 <li><button type="button" class="primary-btn">Усі</button></li>
                 <li><button type="button" class="primary-btn">Веб-сайти</button></li>
                 <li><button type="button" class="primary-btn">Додатки</button></li>
@@ -45,7 +45,7 @@
                 <li><button type="button" class="primary-btn">Маркетинг</button></li>
             </ul>
 
-            <ul class="examples link">
+            <ul class="examples list">
                 <li>
                     <img src="./images/portfolio/img.jpg" alt="portraits_of_3_people_on_a_laptop" width="370" height="294">
                     <h2 class="examples-title">Технокряк</h2>
@@ -100,8 +100,8 @@
         <a href="./index.html" class="logo-footer"><span class="logo-blue">Web</span>Studio</a>
 
         <address>
-            <ul class="add-list link">
-                <li><a href="https://www.google.com/maps?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjc1Y7t9KX6AhUMiYsKHZ-zAWIQ_AUoAXoECAEQAw" class="bottom-street">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <ul class="add-list list">
+                <li><a href="https://www.google.com/maps?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjc1Y7t9KX6AhUMiYsKHZ-zAWIQ_AUoAXoECAEQAw" class="bottom-street ">м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com" class="list-bottom">info@devstudio.com</a></li>
                 <li><a href="tel:++380961111111" class="list-bottom">+38 096 111 11 11</a></li>
             </ul>
