--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <a href="./index.html" class="logo-oll"><span class="logo-blue">Web</span>Studio</a>
         <nav>
 
-            <ul class="navigation-menu link">
-                <li><a href="./index.html" class="list current">Студія</a></li>
-                <li><a href="./portfolio.html" class="list ">Портфоліо</a></li>
-                <li><a href="" class="list">Контакти</a></li>
+            <ul class="navigation-menu list">
+                <li><a href="./index.html" class="navigation-link current">Студія</a></li>
+                <li><a href="./portfolio.html" class="navigation-link ">Портфоліо</a></li>
+                <li><a href="" class="navigation-link">Контакти</a></li>
             </ul>
         </nav>
 
-        <ul class="contact-list link">
+        <ul class="contact-list list">
             <li><a href="mailto:info@devstudio.com" class="top-list">info@devstudio.com</a></li>
             <li><a href="tel:++380961111111" class="top-list">+38 096 111 11 11</a></li>
         </ul>
@@ -38,7 +38,7 @@
 
         <section>
             <h2>Особливості</h2>
-            <ul class="features link">
+            <ul class="features list">
                 <li>
                     <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -56,11 +56,11 @@
                     <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
 
-            </ul class="link">
+            </ul class="list">
         </section>
         <section class="projects">
             <h2 class="projects-title">Чим ми займаємося</h2>
-            <ul class="link">
+            <ul class="list">
                 <li><img src="./images/box1.png" alt="close-up-image-programer-working-his-desk-office" width="370"></li>
                 <li><img src="./images/box2.png" alt="designers-are-developing-application-smartphones-interface-mobile-phones" width="370"></li>
                 <li><img src="./images/box3.png" alt="artist-web-design-with-working-colour-selection-graphic-tablett" width="370"></li>
@@ -69,7 +69,7 @@
         </section>
         <section class="team">
             <h2 class="team-title">Наша команда</h2>
-            <ul class="team-list link">
+            <ul class="team-list list">
                 <li>
                     <img src="./images/img(2).jpg" alt="portrait_photo_Igor_Demyanenko" width="270">
                     <h3 class="team-member">Ігор Дем'яненко</h3>
@@ -102,7 +102,7 @@
         <a href="./index.html" class="logo-footer"><span class="logo-blue">Web</span>Studio</a>
 
         <address>
-            <ul class="add-list link">
+            <ul class="add-list list">
                 <li><a href="https://www.google.com/maps?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjc1Y7t9KX6AhUMiYsKHZ-zAWIQ_AUoAXoECAEQAw" class="bottom-street">м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com" class="list-bottom">info@devstudio.com</a></li>
                 <li><a href="tel:++380961111111" class="list-bottom">+38 096 111 11 11</a></li>
